added: Home, Galleries, Bio, CV, Contact

--- a/Home/index.html
+++ b/Home/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <title>Artwork of Frans Lotz</title>
+        <link href = "styles.css" rel="stylesheet" type = "text/css">
     </head>
     <body>
-        <h1>Artwork of Frans Lotz</h1>
+        <h1><strong><i>Artwork of Frans Lotz</i></strong></h1> <br />
+        <ul>
+            <li><a.href="Galleries.html">Galleries</a.href></a></li>
+            <li><a.href="Bio.html">Bio</a.href></li>
+            <li><a.href="CV.html">CV</a.href></li>
+            <li><a.href="Contact.html">Contact</a.href></li>
+        </ul>
     </body>
 </html>
