--- a/Galleries/index.html
+++ b/Galleries/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Curriculum Vitae - Frans Lotz</title>
+        <title>Galleries - Artwork by Frans Lotz</title>
         <link href = "home/styles.css" rel="stylesheet" type = "text/css">
     </head>
     <body>
-        <h1>Curriculum Vitae - Frans Lotz</h1>
+        <h1>Galleries - Artwork by Frans Lotz</h1>
     </body>
 </html>
