Updated: Nav CSS across all pages

--- a/CV/index.html
+++ b/CV/index.html
@@ -2,9 +2,21 @@
 <html>
     <head>
         <title>Curriculum Vitae - Frans Lotz</title>
-        <link href = "home/styles.css" rel="stylesheet" type = "text/css">
+        <link href = "styles.css" rel="stylesheet" type = "text/css"></link>
     </head>
     <body>
+        <header>
+            <h1><strong><i>Artwork of Frans Lotz</i></strong></h1>
+        <ul id=nav>
+            <li><a href="Galleries.html">Galleries</a.href></a></li>
+            <ul id=galleries>
+                <li><a href="Galleries/Tiny_Objects.html">Tiny Objects</a></li>
+                <li><a href="Galleries/Prints.html">Prints</a></li>
+            </ul>
+            <li><a href="Bio.html">Bio</a.href></li>
+            <li><a href="CV.html"><stong>CV</stong>></a.href></li>
+            <li><a href="Contact.html">Contact</a.href></li>
+        </ul></header><br />
         <h1>Curriculum Vitae - Frans Lotz</h1>
     </body>
 </html>
