--- a/Galleries/Tiny Objects/index.html
+++ b/Galleries/Tiny Objects/index.html
@@ -2,9 +2,20 @@
 <html>
     <head>
         <title>Tiny Objects by Frans Lotz</title>
-        <link href = "home/styles.css" rel="stylesheet" type = "text/css">
+        <link href = "styles.css" rel="stylesheet" type = "text/css"> </link>
     </head>
     <body>
-        <h1>Tiny Objects by Frans Lotz</h1>
+        <header>
+            <h1><strong><i>Artwork of Frans Lotz</i></strong></h1>
+        <ul id=nav>
+            <li><a href="Galleries.html"><strong>Galleries</strong>></a.href></a></li>
+            <ul id=galleries>
+                <li><a href="Galleries/Tiny_Objects.html"><strong>Tiny Objects</strong>></a></li>
+                <li><a href="Galleries/Prints.html">Prints</a></li>
+            </ul>
+            <li><a href="Bio.html">Bio</a.href></li>
+            <li><a href="CV.html">CV</a.href></li>
+            <li><a href="Contact.html">Contact</a.href></li>
+        </ul></header><br />
     </body>
 </html>
