--- a/Home/index.html
+++ b/Home/index.html
@@ -5,12 +5,17 @@
         <link href = "styles.css" rel="stylesheet" type = "text/css">
     </head>
     <body>
-        <h1><strong><i>Artwork of Frans Lotz</i></strong></h1> <br />
-        <ul>
-            <li><a.href="Galleries.html">Galleries</a.href></a></li>
-            <li><a.href="Bio.html">Bio</a.href></li>
-            <li><a.href="CV.html">CV</a.href></li>
-            <li><a.href="Contact.html">Contact</a.href></li>
-        </ul>
+        <header>
+            <h1><strong><i>Artwork of Frans Lotz</i></strong></h1>
+        <ul id=nav>
+            <li><a href="Galleries.html">Galleries</a.href></a></li>
+            <ul id=galleries>
+                <li><a href="Galleries/Tiny_Objects.html">Tiny Objects</a></li>
+                <li><a href="Galleries/Prints.html">Prints</a></li>
+            </ul>
+            <li><a href="Bio.html">Bio</a.href></li>
+            <li><a href="CV.html">CV</a.href></li>
+            <li><a href="Contact.html">Contact</a.href></li>
+        </ul></header><br />
     </body>
 </html>
