updated: Galleries (framed in)

--- a/Home/index.html
+++ b/Home/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1><strong><i>Artwork of Frans Lotz</i></strong></h1>
+            <h2 id=logo>Artwork of Frans Lotz</h2>
         <ul id=nav>
             <li><a href="Galleries.html">Galleries</a.href></a></li>
             <ul id=galleries>
@@ -17,5 +17,6 @@
             <li><a href="CV.html">CV</a.href></li>
             <li><a href="Contact.html">Contact</a.href></li>
         </ul></header><br />
+        <h1 id=pageTitle>Artwork of Frans Lotz</h1>
     </body>
 </html>
