--- a/Galleries/index.html
+++ b/Galleries/index.html
@@ -17,5 +17,10 @@
             <li><a href="CV.html">CV</a.href></li>
             <li><a href="Contact.html">Contact</a.href></li>
         </ul></header><br />
+        <h1 id=pageTitle>Galleries</h1> <br />
+        <ul id=galleryMenu>
+            <li><a href="Tiny_Objects.html">Tiny Objects</a></li>
+            <li><a href="Prints.html">Prints</a></li>
+        </ul>
     </body>
 </html>
