--- a/Home/index.html
+++ b/Home/index.html
@@ -8,14 +8,14 @@
         <header>
             <h2 id=logo>Artwork of Frans Lotz</h2>
         <ul id=nav>
-            <li><a href="Galleries.html">Galleries</a.href></a></li>
+            <li><a href="Galleries/index.html">Galleries</a.href></a></li>
             <ul id=galleries>
-                <li><a href="Galleries/Tiny_Objects.html">Tiny Objects</a></li>
-                <li><a href="Galleries/Prints.html">Prints</a></li>
+                <li><a href="Galleries/Tiny_Objects/index.html">Tiny Objects</a></li>
+                <li><a href="Galleries/Prints/index.html">Prints</a></li>
             </ul>
-            <li><a href="Bio.html">Bio</a.href></li>
-            <li><a href="CV.html">CV</a.href></li>
-            <li><a href="Contact.html">Contact</a.href></li>
+            <li><a href="Bio/index.html">Bio</a.href></li>
+            <li><a href="CV/index.html">CV</a.href></li>
+            <li><a href="Contact/index.html">Contact</a.href></li>
         </ul></header><br />
         <h1 id=pageTitle>Artwork of Frans Lotz</h1>
     </body>
